website/versioned_docs/0.18/android-building-from-source.md
---
id: version-0.18-android-building-from-source
title: android-building-from-source
original_id: android-building-from-source
---
<a id="content"></a><h1>Building React Native from source</h1><div><p>You will need to build React Native from source if you want to work on a new feature/bug fix, try out the latest features which are not released yet, or maintain your own fork with patches that cannot be merged to the core.</p><h2><a class="anchor" name="prerequisites"></a>Prerequisites <a class="hash-link" href="#prerequisites">#</a></h2><p>Assuming you have the Android SDK installed, run <code>android</code> to open the Android SDK Manager.</p><p>Make sure you have the following installed:</p><ol><li>Android SDK version 23 (compileSdkVersion in <a href="https://github.com/facebook/react-native/blob/master/ReactAndroid/build.gradle" target="_blank"><code>build.gradle</code></a>)</li><li>SDK build tools version 23.0.1 (buildToolsVersion in <a href="https://github.com/facebook/react-native/blob/master/ReactAndroid/build.gradle" target="_blank"><code>build.gradle</code></a>)</li><li>Android Support Repository &gt;= 17 (for Android Support Library)</li><li>Android NDK (download &amp; extraction instructions <a href="http://developer.android.com/ndk/downloads/index.html" target="_blank">here</a>)</li></ol><p>Point Gradle to your Android SDK: either have <code>$ANDROID_SDK</code> and <code>$ANDROID_NDK</code> defined, or create a local.properties file in the root of your react-native checkout with the following contents:</p><div class="prism language-javascript">sdk<span class="token punctuation">.</span>dir<span class="token operator">=</span>absolute_path_to_android_sdk
ndk<span class="token punctuation">.</span>dir<span class="token operator">=</span>absolute_path_to_android_ndk</div><p>Example:</p><div class="prism language-javascript">sdk<span class="token punctuation">.</span>dir<span class="token operator">=</span><span class="token operator">/</span>Users<span class="token operator">/</span>your_unix_name<span class="token operator">/</span>android<span class="token operator">-</span>sdk<span class="token operator">-</span>macosx
ndk<span class="token punctuation">.</span>dir<span class="token operator">=</span><span class="token operator">/</span>Users<span class="token operator">/</span>your_unix_name<span class="token operator">/</span>android<span class="token operator">-</span>ndk<span class="token operator">/</span>android<span class="token operator">-</span>ndk<span class="token operator">-</span>r10e</div><h2><a class="anchor" name="building-the-source"></a>Building the source <a class="hash-link" href="#building-the-source">#</a></h2><h4><a class="anchor" name="1-installing-the-fork"></a>1. Installing the fork <a class="hash-link" href="#1-installing-the-fork">#</a></h4><p>First, you need to install <code>react-native</code> from your fork. For example, to install the master branch from the official repo, run the following:</p><div class="prism language-javascript">npm install <span class="token operator">--</span>save github<span class="token punctuation">:</span>facebook<span class="token operator">/</span>react<span class="token operator">-</span>native#master</div><p>Alternatively, you can clone the repo to your <code>node_modules</code> directory and run <code>npm install</code> inside the cloned repo.</p><h4><a class="anchor" name="2-adding-gradle-dependencies"></a>2. Adding gradle dependencies <a class="hash-link" href="#2-adding-gradle-dependencies">#</a></h4><p>Add <code>gradle-download-task</code> as dependency in <code>android/build.gradle</code>:</p><div class="prism language-javascript"><span class="token punctuation">.</span><span class="token punctuation">.</span><span class="token punctuation">.</span>
    dependencies <span class="token punctuation">{</span>
        classpath <span class="token string">'com.android.tools.build:gradle:1.3.1'</span>
        classpath <span class="token string">'de.undercouch:gradle-download-task:2.0.0'</span>

       <span class="token comment" spellcheck="true"> // NOTE: Do not place your application dependencies here; they belong
</span>       <span class="token comment" spellcheck="true"> // in the individual module build.gradle files
</span>    <span class="token punctuation">}</span>
<span class="token punctuation">.</span><span class="token punctuation">.</span><span class="token punctuation">.</span></div><h4><a class="anchor" name="3-adding-the-reactandroid-project"></a>3. Adding the <code>:ReactAndroid</code> project <a class="hash-link" href="#3-adding-the-reactandroid-project">#</a></h4><p>Add the <code>:ReactAndroid</code> project in <code>android/settings.gradle</code>:</p><div class="prism language-javascript"><span class="token punctuation">.</span><span class="token punctuation">.</span><span class="token punctuation">.</span>
include <span class="token string">':ReactAndroid'</span>

<span class="token function">project<span class="token punctuation">(</span></span><span class="token string">':ReactAndroid'</span><span class="token punctuation">)</span><span class="token punctuation">.</span>projectDir <span class="token operator">=</span> <span class="token keyword">new</span> <span class="token class-name">File</span><span class="token punctuation">(</span>
    rootProject<span class="token punctuation">.</span>projectDir<span class="token punctuation">,</span> <span class="token string">'../node_modules/react-native/ReactAndroid'</span><span class="token punctuation">)</span>
<span class="token punctuation">.</span><span class="token punctuation">.</span><span class="token punctuation">.</span></div><p>Modify your <code>android/app/build.gradle</code> to use the <code>:ReactAndroid</code> project instead of the pre-compiled library, e.g. - replace <code>compile 'com.facebook.react:react-native:0.16.+'</code> with <code>compile project(':ReactAndroid')</code>:</p><div class="prism language-javascript"><span class="token punctuation">.</span><span class="token punctuation">.</span><span class="token punctuation">.</span>
dependencies <span class="token punctuation">{</span>
    compile <span class="token function">fileTree<span class="token punctuation">(</span></span>dir<span class="token punctuation">:</span> <span class="token string">'libs'</span><span class="token punctuation">,</span> include<span class="token punctuation">:</span> <span class="token punctuation">[</span><span class="token string">'*.jar'</span><span class="token punctuation">]</span><span class="token punctuation">)</span>
    compile <span class="token string">'com.android.support:appcompat-v7:23.0.1'</span>

    compile <span class="token function">project<span class="token punctuation">(</span></span><span class="token string">':ReactAndroid'</span><span class="token punctuation">)</span>

    <span class="token punctuation">.</span><span class="token punctuation">.</span><span class="token punctuation">.</span>
<span class="token punctuation">}</span>
<span class="token punctuation">.</span><span class="token punctuation">.</span><span class="token punctuation">.</span></div><h4><a class="anchor" name="4-making-3rd-party-modules-use-your-fork"></a>4. Making 3rd-party modules use your fork <a class="hash-link" href="#4-making-3rd-party-modules-use-your-fork">#</a></h4><p>If you use 3rd-party React Native modules, you need to override their dependencies so that they don't bundle the pre-compiled library. Otherwise you'll get an error while compiling - <code>Error: more than one library with package name 'com.facebook.react'</code>.</p><p>Modify your <code>android/app/build.gradle</code> and replace <code>compile project(':react-native-custom-module')</code> with:</p><div class="prism language-javascript"><span class="token function">compile<span class="token punctuation">(</span></span><span class="token function">project<span class="token punctuation">(</span></span><span class="token string">':react-native-custom-module'</span><span class="token punctuation">)</span><span class="token punctuation">)</span> <span class="token punctuation">{</span>
    exclude group<span class="token punctuation">:</span> <span class="token string">'com.facebook.react'</span><span class="token punctuation">,</span> module<span class="token punctuation">:</span> <span class="token string">'react-native'</span>
<span class="token punctuation">}</span></div><h2><a class="anchor" name="additional-notes"></a>Additional notes <a class="hash-link" href="#additional-notes">#</a></h2><p>Building from source can take a long time, especially for the first build, as it needs to download ~200 MB of artifacts and compile the native code. Every time you update the <code>react-native</code> version from your repo, the build directory may get deleted, and all the files are re-downloaded. To avoid this, you might want to change your build directory path by editing the <code>~/.gradle/init.gradle</code> file:</p><div class="prism language-javascript">gradle<span class="token punctuation">.</span>projectsLoaded <span class="token punctuation">{</span>
    rootProject<span class="token punctuation">.</span>allprojects <span class="token punctuation">{</span>
        buildDir <span class="token operator">=</span> <span class="token string">"/path/to/build/directory/${rootProject.name}/${project.name}"</span>
    <span class="token punctuation">}</span>
<span class="token punctuation">}</span></div></div><div class="docs-prevnext"><a class="docs-next" href="activityindicatorios.html#content">Next →</a></div>